force-app/main/default/objects/Payment__c/fields/Amount_To_Refund__c.field-meta.xml
<CustomField>
    <fullName>Amount_To_Refund__c</fullName>
    <formula>Payment_Amount__c * Percent_Of_Amount_To_Refund__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount To Refund</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>