force-app/main/default/objects/Payment__c/fields/CRM_Name__c.field-meta.xml
<CustomField>
    <fullName>CRM_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CRM Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Payments</relationshipName>
    <type>Lookup</type>
</CustomField>