force-app/main/default/objects/Payment__c/fields/Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Email_Address__c</fullName>
    <label>Payer Email</label>
    <type>Email</type>
</CustomField>