force-app/main/default/objects/Payment__c/fields/InstaCollect_Bank_Settlement_Date__c.field-meta.xml
<CustomField>
    <fullName>InstaCollect_Bank_Settlement_Date__c</fullName>
    <label>InstaCollect Bank Settlement Date</label>
    <type>Date</type>
</CustomField>