force-app/main/default/objects/Payment__c/fields/InstaCollect_Narration__c.field-meta.xml
<CustomField>
    <fullName>InstaCollect_Narration__c</fullName>
    <label>InstaCollect Narration</label>
    <length>255</length>
    <type>Text</type>
</CustomField>