force-app/main/default/objects/Payment__c/fields/InstaCollect_Settled_By_Bank__c.field-meta.xml
<CustomField>
    <fullName>InstaCollect_Settled_By_Bank__c</fullName>
    <defaultValue>false</defaultValue>
    <label>InstaCollect Settled By Bank</label>
    <type>Checkbox</type>
</CustomField>