force-app/main/default/objects/Payment__c/fields/InstaCollect_Settlement_Date__c.field-meta.xml
<CustomField>
    <fullName>InstaCollect_Settlement_Date__c</fullName>
    <label>InstaCollect Settlement Date</label>
    <type>DateTime</type>
</CustomField>