force-app/main/default/objects/Payment__c/fields/InstaCollect_Status__c.field-meta.xml
<CustomField>
    <fullName>InstaCollect_Status__c</fullName>
    <label>InstaCollect Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>