force-app/main/default/objects/Payment__c/fields/InstaCollect_Transaction_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>InstaCollect_Transaction_Date_Time__c</fullName>
    <label>InstaCollect Transaction Date Time</label>
    <type>DateTime</type>
</CustomField>