force-app/main/default/objects/Payment__c/fields/InstaCollect_Transaction_Id__c.field-meta.xml
<CustomField>
    <fullName>InstaCollect_Transaction_Id__c</fullName>
    <label>InstaCollect Transaction Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>