force-app/main/default/objects/Payment__c/fields/InstaCollect_Transaction_Reference__c.field-meta.xml
<CustomField>
    <fullName>InstaCollect_Transaction_Reference__c</fullName>
    <label>InstaCollect Transaction Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>