force-app/main/default/objects/Payment__c/fields/Is_Refund_Success__c.field-meta.xml
<CustomField>
    <fullName>Is_Refund_Success__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Refund Initiated</label>
    <type>Checkbox</type>
</CustomField>