force-app/main/default/objects/Payment__c/fields/Is_Webhook__c.field-meta.xml
<CustomField>
    <fullName>Is_Webhook__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Webhook</label>
    <type>Checkbox</type>
</CustomField>