force-app/main/default/objects/Payment__c/fields/Merchant_Transaction_Id__c.field-meta.xml
<CustomField>
    <fullName>Merchant_Transaction_Id__c</fullName>
    <label>Merchant Transaction Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>