force-app/main/default/objects/Payment__c/fields/Payment_Easepay_Id__c.field-meta.xml
<CustomField>
    <fullName>Payment_Easepay_Id__c</fullName>
    <label>Payment Easepay Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>