force-app/main/default/objects/Payment__c/fields/Payment_Gateway__c.field-meta.xml
<CustomField>
    <fullName>Payment_Gateway__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Sent</label>
    <referenceTo>Payment_Gateway__c</referenceTo>
    <relationshipLabel>Payments Received</relationshipLabel>
    <relationshipName>Payments</relationshipName>
    <type>Lookup</type>
</CustomField>