force-app/main/default/objects/Payment__c/fields/Payment_Milestone_Name__c.field-meta.xml
<CustomField>
    <fullName>Payment_Milestone_Name__c</fullName>
    <label>Payment Milestone Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>