force-app/main/default/objects/Payment__c/fields/Payment_Status__c.field-meta.xml
<CustomField>
    <fullName>Payment_Status__c</fullName>
    <label>Payment Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>active</fullName>
            </value>
            <value>
                <fullName>success</fullName>
            </value>
            <value>
                <fullName>failure</fullName>
            </value>
            <value>
                <fullName>userCancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>