force-app/main/default/objects/Payment__c/fields/Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>Payment_Type__c</fullName>
    <label>Payment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EasyCollect</fullName>
            </value>
            <value>
                <fullName>InstaCollect</fullName>
            </value>
            <value>
                <fullName>Cheque</fullName>
            </value>
            <value>
                <fullName>Loan</fullName>
            </value>
            <value>
                <fullName>Offline</fullName>
            </value>
            <value>
                <fullName>Bank (Cheque/Neft)</fullName>
                <isActive>false</isActive>
                <label>Bank (Cheque/Neft)</label>
            </value>
            <value>
                <fullName>Online</fullName>
                <isActive>false</isActive>
                <label>Online</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>