force-app/main/default/objects/Payment__c/fields/Percent_Of_Amount_To_Refund__c.field-meta.xml
<CustomField>
    <fullName>Percent_Of_Amount_To_Refund__c</fullName>
    <label>Percent Of Amount To Refund</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>