force-app/main/default/objects/Payment__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <label>Payer Phone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>