force-app/main/default/objects/Payment__c/fields/Refund_Settled_Date__c.field-meta.xml
<CustomField>
    <fullName>Refund_Settled_Date__c</fullName>
    <label>Refund Settled Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>