force-app/main/default/objects/Payment__c/fields/Refund_Status__c.field-meta.xml
<CustomField>
    <fullName>Refund_Status__c</fullName>
    <label>Refund Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>