force-app/main/default/objects/Payment__c/fields/Remitter_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Remitter_Account_Number__c</fullName>
    <label>Remitter Account Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>