force-app/main/default/objects/Payment__c/fields/Remitter_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Remitter_Full_Name__c</fullName>
    <label>Remitter Full Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>