force-app/main/default/objects/Payment__c/fields/Remitter_UPI_Handle__c.field-meta.xml
<CustomField>
    <fullName>Remitter_UPI_Handle__c</fullName>
    <label>Remitter UPI Handle</label>
    <length>255</length>
    <type>Text</type>
</CustomField>